--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -38,7 +38,7 @@
 }
 
 .mdui-panel-item-summary{
-    width: 90.5%    
+    width: 12.5%    
     text-align: center
 }
 
@@ -57,9 +57,16 @@
 
 
 #button-row, #input-row{
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #button-row{
     text-align: center
+    margin-bottom: 10px
+}
+
+#top-title{
+    text-align: center
+    font-size: 4vh
+    padding-top: 8vh
 }
