--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,11 @@
                     <i class="mdui-menu-item-icon mdui-icon material-icons">exit_to_app</i>退出登录
                 </a>
             </li>
-          </ul>
+        </ul>
+    </div>
+
+    <div id="top-title">
+        <span>中科大SOFC实验室高温炉预约系统</span>
     </div>
     
     <div id="announcement-dialog" class="mdui-dialog">
