--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,7 @@
   line-height: 1.5;
 }
 .mdui-panel-item-summary {
-  width: 90.5%;
+  width: 12.5%;
   text-align: center;
 }
 .head-font {
@@ -46,8 +46,14 @@
 }
 #button-row,
 #input-row {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 #button-row {
   text-align: center;
+  margin-bottom: 10px;
+}
+#top-title {
+  text-align: center;
+  font-size: 4vh;
+  padding-top: 8vh;
 }
