--- a/views/after.ejs
+++ b/views/after.ejs
@@ -1,5 +1,6 @@
-        <script src="https://cdn.jsdelivr.net/npm/mdui@1.0.0/dist/js/mdui.min.js" integrity="sha384-aB8rnkAu/GBsQ1q6dwTySnlrrbhqDwrDnpVHR2Wgm8pWLbwUnzDcIROX3VvCbaK+" crossorigin="anonymous"></script>
+        <script src="/js/mdui.min.js"></script>
         <script src="/laydate/laydate.js"></script>
-        <script src="/javascripts/main.js"></script>
+        <script src="/js/crypto-js-4.0.0/crypto-js.js"></script>
+        <script src="/js/main.js"></script>
     </body>
 </html>
