--- a/views/before.ejs
+++ b/views/before.ejs
@@ -6,9 +6,8 @@
         <meta name="renderer" content="webkit"/>
         <meta name="force-rendering" content="webkit"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-        <%# MDUI CSS %>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.0/dist/css/mdui.min.css" integrity="sha384-2PJ2u4NYg6jCNNpv3i1hK9AoAqODy6CdiC+gYiL2DVx+ku5wzJMFNdE3RoWfBIRP" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="/stylesheets/style.css"/>
+        <link rel="stylesheet" href="/css/mdui.min.css"/>
+        <link rel="stylesheet" href="/css/style.css"/>
         <title><%= WebTitle %></title>
     </head>
 <body class="mdui-theme-primary-indigo mdui-theme-accent-pink">
