--- a/views/after.ejs
+++ b/views/after.ejs
@@ -1,6 +1,7 @@
         <script src="/js/mdui.min.js"></script>
         <script src="/laydate/laydate.js"></script>
-        <script src="/js/crypto-js-4.0.0/crypto-js.js"></script>
+        <script src="/js/core.js"></script>
+        <script src="/js/sha256.js"></script>
         <script src="/js/main.js"></script>
     </body>
 </html>
