--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -58,6 +58,12 @@
     font-weight: 700
 }
 
+.mdui-panel-item-header{
+    height: unset !important
+    min-height: 48px
+    padding: 8px 0
+}
+
 @media only screen and (max-width: 600px) {
     .panel-temperature, .panel-material {
         display: none;
