修复预约时间问题及日期控件响应式问题

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -68,6 +68,15 @@
     .panel-temperature, .panel-material {
         display: none;
     }
+    .layui-laydate-content table{
+        width: 100%    
+    }
+    .layui-laydate-range{
+        width: 100vw !important
+    }
+    .layui-laydate-main{
+        width: 100% !important
+    }
 }
 
 @media only screen and (max-width: 1023px) {
