增加历史记录状态及排序方式

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -86,13 +86,20 @@
 }
 
 .status-busy{
-    color: red
+    color: #FF0000 !important
 }
 
 .status-idle{
-    color: green
+    color:#008000 !important
 }
 
+.status-done{
+    color:#A9A9A9 !important
+}
+
+.status-undone{
+    color: #1E90FF !important
+}
 
 #button-row, #input-row{
     margin-top: 10px;
