--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -11,19 +11,26 @@
 }
 
 #top-container {
-    height: 30vh
+    height: 20vh
+}
+
+#bottom-container {
+    //height: calc(10%)
+    
 }
 
 #main-card {
-    top: -10vh
+    top: -15vh
     padding: 10px
 }
 
 #user-info {
     margin-right: 20px
-    margin-top: 20px
     & button{
         font-size: 18px 
+    }
+    & ul{
+       color: rgba(0,0,0,.54); 
     }
 }
 
@@ -65,7 +72,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-    .panel-temperature, .panel-material {
+    .panel-attach {
         display: none;
     }
     .layui-laydate-content table{
@@ -108,10 +115,4 @@
 #button-row{
     text-align: center
     margin-bottom: 10px
-}
-
-#top-title{
-    text-align: center
-    font-size: 4vh
-    padding-top: 8vh
 }
