--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,37 @@
 <%- include('before', {WebTitle: '中科大SOFC实验室预约系统'}); %>
 
-<div id="top-container" class="mdui-container-fluid mdui-color-blue-600">
-    <div id="user-info" class="mdui-float-right">
-        <button class="mdui-btn mdui-ripple-red" mdui-menu="{target: '#user-menu'}" ><i class="mdui-icon mdui-icon-left material-icons"><%= icon %></i> <%= username %> (<%= id %>) </button>
-        <ul class="mdui-menu" id="user-menu">
-            <li class="mdui-menu-item">
-                <a href="javascript:showAnnouncement(true);" class="mdui-ripple">
-                    <i class="mdui-menu-item-icon mdui-icon material-icons">announcement</i>公告
-                </a>
-            </li>
-            <li id="user-menu-darkmode" class="mdui-menu-item">
-                <a href="javascript:changeNightMode();" class="mdui-ripple">
-                    <i class="mdui-menu-item-icon mdui-icon material-icons">brightness_2</i>夜间模式
-                </a>
-            </li>
-            <li class="mdui-menu-item">
-                <a href="/logout" class="mdui-ripple">
-                    <i class="mdui-menu-item-icon mdui-icon material-icons">exit_to_app</i>退出登录
-                </a>
-            </li>
-        </ul>
+<header class="mdui-appbar mdui-appbar-fixed mdui-shadow-0 mdui-color-blue-600">
+    <div class="mdui-toolbar">
+        <a href="javascript:;" mdui-drawer="{target: 'aside', swipe: true}" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
+        <span class="mdui-typo-headline">中科大SOFC实验室高温炉预约系统</span>
+        <div class="mdui-toolbar-spacer"></div> 
+        <div id="user-info">
+            <button class="mdui-btn mdui-ripple-red" mdui-menu="{target: '#user-info .mdui-menu'}" ><i class="mdui-icon mdui-icon-left material-icons"><%= icon %></i> <%= username %> (<%= id %>) </button>
+            <ul class="mdui-menu">
+                <li class="mdui-menu-item">
+                    <a href="javascript:showAnnouncement(true);" class="mdui-ripple">
+                        <i class="mdui-menu-item-icon mdui-icon material-icons">announcement</i>公告
+                    </a>
+                </li>
+                <li id="user-menu-darkmode" class="mdui-menu-item">
+                    <a href="javascript:changeNightMode();" class="mdui-ripple">
+                        <i class="mdui-menu-item-icon mdui-icon material-icons">brightness_2</i>夜间模式
+                    </a>
+                </li>
+                <li class="mdui-menu-item">
+                    <a href="/logout" class="mdui-ripple">
+                        <i class="mdui-menu-item-icon mdui-icon material-icons">exit_to_app</i>退出登录
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
+    <div class="mdui-tab mdui-tab-full-width mdui-color-blue-600"></div>
+</header>
 
-    <div id="top-title">
-        <span>中科大SOFC实验室高温炉预约系统</span>
-    </div>
-    
+<aside class="mdui-drawer mdui-drawer-close"></aside>
+
+<div id="top-container" class="mdui-container-fluid mdui-color-blue-600">
     <div id="announcement-dialog" class="mdui-dialog">
         <div class="mdui-dialog-title"></div>
         <div class="mdui-dialog-content"></div>
@@ -37,29 +43,6 @@
 
 <div id="bottom-container" class="mdui-container">
     <div id="main-card" class="mdui-card mdui-center mdui-shadow-12">
-        <div id="input-row" class="mdui-row">
-            <div class="mdui-col-offset-xs-1 mdui-col-xs-4">
-                <div class="mdui-textfield  mdui-textfield-floating-label">
-                    <label class="mdui-textfield-label">预约日期</label>
-                    <input id="datepicker" autocomplete="off" class="mdui-textfield-input" type="text" required/>
-                    <div class="mdui-textfield-error">请选择预约日期</div>
-                </div>
-            </div>
-            <div class="mdui-col-xs-3">
-                <div class="mdui-textfield mdui-textfield-floating-label">
-                    <label class="mdui-textfield-label">材料</label>
-                    <input id="material-input" class="mdui-textfield-input" type="text" required/>
-                    <div class="mdui-textfield-error">请输入材料</div>
-                </div>
-            </div>
-            <div class="mdui-col-xs-3">
-                <div class="mdui-textfield mdui-textfield-floating-label">
-                    <label class="mdui-textfield-label">温度</label>
-                    <input id="temperature-input" class="mdui-textfield-input" type="text" required/>
-                    <div class="mdui-textfield-error">请输入温度</div>
-                </div>
-            </div>
-        </div>
         <div id="button-row" class="mdui-row">
             <div class="mdui-col-xs-4">
                 <button onclick="refreshPanel()" class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme">刷新</button>      
