--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -11,17 +11,17 @@
 }
 
 #top-container {
-    height: 20vh
+    height: 40vh
 }
 
 #bottom-container {
-    //height: calc(10%)
-    
+    height: 10px
 }
 
 #main-card {
-    top: -15vh
+    top: -35vh
     padding: 10px
+    margin-bottom: 5vh
 }
 
 #user-info {
