--- a/views/before.ejs
+++ b/views/before.ejs
@@ -10,5 +10,5 @@
         <link rel="stylesheet" href="/css/style.css"/>
         <title><%= WebTitle %></title>
     </head>
-<body class="mdui-theme-primary-indigo mdui-theme-accent-pink">
+<body class="mdui-theme-primary-blue mdui-theme-accent-pink">
     
