--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
             </label>
             </div>
             <div class="mdui-card-actions">
-                <button onclick="login();" class="mdui-center mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme">登录</button>
+                <button onclick="login();" class="mdui-center mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-600">登录</button>
             </div>
         </div>
 
@@ -62,7 +62,7 @@
             </div>
             </div>
             <div class="mdui-card-actions">
-                <button onclick="signup();" class="mdui-center mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme">注册</button>
+                <button onclick="signup();" class="mdui-center mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-600">注册</button>
             </div>
         </div>
 
