--- a/views/page/login.njk
+++ b/views/page/login.njk
@@ -13,7 +13,7 @@
                             <a class="nav-link active" id="login-tab" data-toggle="pill" href="#login-tabContent" role="tab"><strong>登录</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="signin-tab" data-toggle="pill" href="#signin-tabContent" role="tab"><strong>注册</strong></a>
+                            <a class="nav-link" id="signin-tab" data-toggle="pill" href="#signup-tabContent" role="tab"><strong>注册</strong></a>
                         </li>
                     </ul>
                 </div>
@@ -53,8 +53,37 @@
                                 <button type="button" class="btn btn-primary" id="login-btn">登录</button>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="signin-tabContent" role="tabpanel">
-                            Mauris tincidunt mi at erat gravida, eget tristique urna bibendum. Mauris pharetra purus ut ligula tempor, et vulputate metus facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas sollicitudin, nisi a luctus interdum, nisl ligula placerat mi, quis posuere purus ligula eu lectus. Donec nunc tellus, elementum sit amet ultricies at, posuere nec nunc. Nunc euismod pellentesque diam.
+                        <div class="tab-pane fade" id="signup-tabContent" role="tabpanel">
+                            <div class="input-group mb-3" id="signup-studentID-input">
+                                <input type="email" class="form-control" placeholder="学号">
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-home"></span>
+                                    </div>
+                                </div>
+                                <div class="invalid-feedback">请输入正确格式的学号</div>
+                            </div>
+                            <div class="input-group mb-3" id="signup-password-input">
+                                <input type="password" class="form-control" placeholder="密码">
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-lock"></span>
+                                    </div>
+                                </div>
+                                <div class="invalid-feedback">请输入正确格式的密码</div>
+                            </div>
+                            <div class="input-group mb-3" id="signup-confirm-password-input">
+                                <input type="password" class="form-control" placeholder="确认密码">
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-lock"></span>
+                                    </div>
+                                </div>
+                                <div class="invalid-feedback">请输入正确格式的密码</div>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <button type="button" class="btn btn-primary" id="signup-btn">注册</button>
+                            </div>
                         </div>
                     </div>
                 </div>
